# OpenHumming

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  README.zh-CN.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: api.md  architecture.md  memory-system.md  roadmap.md  scheduler.md  showcase.md  skill-system.md
docs/release/: README.md  v1.0.0-demo-script.md  v1.0.0-pr-body.md  v1.0.0-release-notes.md  v1.0.0-social-copy.md
examples/: create_skill.md  create_task.md  custom_tool.py  simple_chat.py
examples/real_demos/: README.md  demo_suite.json  last_run_report.md
examples/real_demos/showcase/: README.md  agent.before.md  skills.after.md  skills.before.md  user.after.md  user.before.md
examples/real_demos/workspace/: agent.md
examples/real_demos/workspace/conversations/: 2026-04-28.jsonl
examples/real_demos/workspace/files/: demo_note.md
examples/real_demos/workspace/skills/: README.md  task_create_list_dir_workflow.md  workspace_orientation.md
openhumming/: main.py
openhumming/agent/: __init__.py  executor.py  loop.py  observer.py  planner.py  reflection.py  runtime.py  state.py
openhumming/cli/: __init__.py  commands.py
openhumming/config/: __init__.py  settings.py
openhumming/llm/: __init__.py  anthropic_provider.py  base.py  deepseek_provider.py  local_provider.py  openai_compatible_provider.py  openai_provider.py  provider_settings.py
openhumming/memory/: __init__.py  applier.py  conversation.py  models.py  profile.py  reflection.py  review_models.py  reviewer.py  store.py  summarizer.py  updater.py
openhumming/scheduler/: __init__.py  daily_review.py  manager.py  parser.py  runner.py
openhumming/server/: __init__.py  app.py  routes_chat.py  routes_reviews.py  routes_settings.py  routes_skills.py  routes_tasks.py  routes_ui.py  showcase.py  websocket.py
openhumming/server/static/: app.css  app.js  index.html
openhumming/skills/: __init__.py  candidate_evaluator.py  creator.py  extractor.py  loader.py  manager.py  reviewer.py  validator.py  workflow_capture.py
openhumming/skills/templates/: skill_prompt.md  skill_template.md
openhumming/tools/: __init__.py  base.py  file_read.py  file_write.py  list_dir.py  registry.py  skill_create.py  skill_read.py  task_create.py
openhumming/trace/: __init__.py  events.py  logger.py  recorder.py
openhumming/workspace/: __init__.py  initializer.py  paths.py
scripts/: deepseek_smoke_test.py  dev_server.py  export_conversations.py  init_workspace.py  run_real_demos.py
tests/: conftest.py  test_agent_loop.py  test_memory.py  test_real_demos.py  test_scheduler.py  test_server.py  test_skills.py  test_tools.py
workspace/: agent.md
workspace/skills/: README.md  example_skill.md
workspace/skills/drafts/: README.md
(+4 files in other folders)
