[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "openhumming"
version = "0.1.0"
description = "A local-first Python agent runtime with markdown memory and evolving skills."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
  { name = "OpenHumming Contributors" }
]
dependencies = [
  "apscheduler>=3.10.4",
  "fastapi>=0.115.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "typer>=0.12.3",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.2.0",
]
providers = [
  "anthropic>=0.39.0",
  "openai>=1.37.0",
]

[project.scripts]
openhumming = "openhumming.main:run"

[tool.hatch.build.targets.wheel]
packages = ["openhumming"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"
